# croquis

./: .gitignore  .readthedocs.yaml  DEVELOPMENT.md  LICENSE  README.md  build.sh  pyproject.toml  setup.py
build_scripts/: .gitignore  README.md  build_linux.sh  build_macos.sh  check_version.py  fix_sourcemap.py  hatch_build_hook.py
croquis_fe/: README  __init__.py  croquis_fe.json
croquis_fe/static/: croquis_fe.css  croquis_fe.js  croquis_loader.js
doc/: ex5.csv  ex6.csv  reference.md  tutorial.md  vscode.md
doc/source/: conf.py  faq.rst  index.rst  readthedocs_helper.sh  requirements.txt  tutorial.rst  ui.rst
src/: CMakeLists.txt
src/croquis/: __init__.py  axis_util.py  buf_util.py  color_util.py  comm.py  data_util.py  datatype_util.py  display.py  env_helper.py  fig_data.py  log_util.py  misc_util.py  plot.py  png_util.py  thr_manager.py
src/croquis/lib/: .gitignore  README  is_dev.py
src/croquis/tests/: axis_util_test.py  data_util_test.py
src/csrc/croquis/: bitmap_buffer.cc  bitmap_buffer.h  buffer.cc  buffer.h  canvas.h  constants.h  figure_data.h  freeform_line_data.cc  grayscale_buffer.cc  grayscale_buffer.h  intersection_finder.cc  intersection_finder.h  line_algorithm.h  message.cc  message.h  plotter.cc  plotter.h  pybind11_shim.cc  rectangular_line_data.cc  rgb_buffer.cc  rgb_buffer.h  task.h  thr_manager.cc  thr_manager.h
src/csrc/croquis/tests/: bitmap_buffer_test.cc  grayscale_buffer_test.cc  line_algorithm_test.cc  show_bitmap.py
src/csrc/croquis/util/: avx_util.h  clock.h  color_util.h  error_helper.cc  error_helper.h  logging.cc  logging.h  macros.h  math.h  myhash.h  optional.h  stl_container_util.h  string_printf.cc  string_printf.h
src/doc/: messages.txt
src/js/: .eslintrc.js  .gitignore  README.md  axis_handler.js  canvas_mouse_handler.js  croquis_fe.css  croquis_fe.js  croquis_loader.js  css_helper.js  ctxt.js  eslint.config.mjs  main.js  package-lock.json  package.json  tile_handler.js  tile_set.js  tsconfig.json  util.js  webpack.config.js
src/js/src/: axis_handler.ts  canvas_mouse_handler.ts  css_helper.ts  ctxt.ts  event_replayer.ts  index.ts  label.ts  status_bar.ts  template.ts  tile.ts  tile_handler.ts  tile_set.ts  types.ts  util.ts
src/js/style/: croquis_fe.css
src/ui_tests/: .gitignore  create_images.py  run_all_tests.py
src/ui_tests/doc_images/: tutorial.py  ui.py
src/ui_tests/test_util/: jupyter_launcher.py  screenshot.py  test_helper.py
src/ui_tests/tests/: basic_test.py  dimension_check_test.py  resize_test.py  save_test.py
